--- a/introduction.html
+++ b/introduction.html
@@ -66,42 +66,19 @@
 	<hr class="sr-only" id="page-content" />
 	<div class="container">
 	    
-    <div class="jumbotron">
-	<h1>CSS Demo</h1>
-	<hr>
-	<p>
-	    <strong>This web site demonstrates various CSS settings like typography and colours.</strong>
-	</p>
-	<p><strong>
-	    Tips: You can change things using the developer mode of your browser<br>
-	    <span style="color: transparent">Tips:</span> or you can clone the <a href="https://github.com/FabriceSalvaire/css-demo">repository</a>.
-	</strong></p>
-	<p>
-	    The site building process is based on the <a href="http://jinja.pocoo.org/docs/dev/">Jinja2</a> template engine,
-	    <a href="http://sass-lang.com/">SASS</a> and <a href="http://gulpjs.com/">Gulp</a>.
-	</p>
-	<p>The CSS is based on top of the <a href="http://getbootstrap.com/">Bootsrap</a> framework.</p>
-	<p>
-	    This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC by-nc-na</a> license
-	    and sources are available <a href="https://github.com/FabriceSalvaire/css-demo">here</a>.
-	</p>
-    </div>
-    <h2>Table of Contents</h2>
-    <ul style="font-size: 150%">
-	
-	    <li class="child first">
-		<a href="introduction.html">Introduction</a></li>
-	
-	    <li class="child first">
-		<a href="colour.html">Colour</a></li>
-	
-	    <li class="child first">
-		<a href="typography.html">Typography</a></li>
-	
-	    <li class="child first">
-		<a href="material.html">Material</a></li>
-	
-    </ul>
+    <h1>Introduction</h1>
+    <h2>What is the meaning?</h2>
+    <p>We will start to define the purpose of a stylesheet and what is the guideline.</p>
+    <p class="lead">
+	<strong>
+	    Rule: A document communicates a mesage from the authors to the readers.<br>
+	</strong>
+    </p>
+    <p class="lead">
+	<strong>
+	    Does it communicate clearly my mesage ?
+	</strong>
+    </p>
 
 	</div>
 	<hr class="sr-only" />
