--- a/material.html
+++ b/material.html
@@ -66,42 +66,46 @@
 	<hr class="sr-only" id="page-content" />
 	<div class="container">
 	    
-    <div class="jumbotron">
-	<h1>CSS Demo</h1>
-	<hr>
-	<p>
-	    <strong>This web site demonstrates various CSS settings like typography and colours.</strong>
-	</p>
-	<p><strong>
-	    Tips: You can change things using the developer mode of your browser<br>
-	    <span style="color: transparent">Tips:</span> or you can clone the <a href="https://github.com/FabriceSalvaire/css-demo">repository</a>.
-	</strong></p>
-	<p>
-	    The site building process is based on the <a href="http://jinja.pocoo.org/docs/dev/">Jinja2</a> template engine,
-	    <a href="http://sass-lang.com/">SASS</a> and <a href="http://gulpjs.com/">Gulp</a>.
-	</p>
-	<p>The CSS is based on top of the <a href="http://getbootstrap.com/">Bootsrap</a> framework.</p>
-	<p>
-	    This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC by-nc-na</a> license
-	    and sources are available <a href="https://github.com/FabriceSalvaire/css-demo">here</a>.
-	</p>
+    <h1>Material</h1>
+    <div>
+	<div class="center-block" style="
+	     line-height: 100px;
+	     width: 500px;
+	     margin-bottom: 30px;
+	     background: hsl(220, 80%, 60%);
+	     color: white;
+	     text-align: center;
+	     ">
+	    <span style="font-size: 200%">Normal Box</span>
+	</div>
+
+	<div class="center-block material-rised"
+	     style="
+	     line-height: 100px;
+	     width: 500px;
+	     background: hsl(220, 80%, 60%);
+	     color: white;
+	     text-align: center;
+	     ">
+	    <p style="font-size: 200%">Rised Box</p>
+	</div>
+
+	<div class="center-block material-rised"
+	     style="
+	     line-height: 100px;
+	     width: 500px;
+	     background: hsl(220, 80%, 60%);
+	     color: white;
+	     text-align: center;
+	     ">
+	    <p style="font-size: 200%">
+		Rised Box
+		<a class="material-floating-button" style="">
+		    <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+		</a>
+	    </p>
+	</div>
     </div>
-    <h2>Table of Contents</h2>
-    <ul style="font-size: 150%">
-	
-	    <li class="child first">
-		<a href="introduction.html">Introduction</a></li>
-	
-	    <li class="child first">
-		<a href="colour.html">Colour</a></li>
-	
-	    <li class="child first">
-		<a href="typography.html">Typography</a></li>
-	
-	    <li class="child first">
-		<a href="material.html">Material</a></li>
-	
-    </ul>
 
 	</div>
 	<hr class="sr-only" />
